--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <header>
     <!-- 🔴 Banner Container with Image -->
 <div class="banner-container">
-  <img src="logo/logo.png" alt="Banner" class="banner-img">
+  <img src="logo/logo2.png" alt="Banner" class="banner-img">
 </div>
 
 <!-- 🇮🇳 Glowing Tricolor Line -->
